fix alignmnt card testimonials

--- a/css/testemonials.css
+++ b/css/testemonials.css
@@ -44,7 +44,7 @@
   bottom: -15px;
 }
 #yw_bg2 {
-  left: 10%;
+  left: 18%;
   bottom: -15px;
 }
 #yw_bg3 {
